[package]
name = "bs721-launchpad"
authors = [
  "Angelo Recca <angelorc@noreply.users.github.com>",
]
description = "BitSong launchpad contract"
version    = "0.1.0"
edition    = "2021"
homepage   = "https://bitsong.io"
repository = "https://github.com/bitsongofficial/cw-nfts"
license    = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bs721-base = { workspace = true, features = ["library"] }
cw721 = { workspace = true }
cw4 = { workspace = true }
prost = { workspace = true }
rand_core = { version = "0.6.4", default-features = false }
sha2 = "0.10.2"
rand_chacha = { version = "0.3.1", default-features = false}
rand = { version = "0.8.5", default-features = false}

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
cw-multi-test = "0.15.0"
bs721-base = { path = "../bs721-base", version = "0.1.0", features = ["library"] }
